cleanup, added updateServer, implemented spreading factor